# local-backend

./: .env  .gitignore  04-oprogramowanie.md  Dockerfile  Makefile  README.md  Readme.md  docker-compose.yml  package-lock.json  package.json  scenario_structure.json  setup.cfg  socket-client-demo.py
authenticator/: .env  Dockerfile  authenticator.py  dbservice.py  requirements.txt
influx/: Dockerfile  setup_entrypoint.sh
postgres/: init.sql
shutdown_service/: init_shutdown_service.sh  shutdown.service  shutdown.sh
src/: server.ts
src/backend/: __main__.py  config.conf  http_server.py  utils.py  venv.conf
src/backend/controllers/: __init__.py  auth.py  logging_service.py  scenario_parser.py  task_models.py  task_pusher.py  tasks.py  websockets_controller.py  workstation.py  workstation_store.py
src/backend/exceptions/: __init__.py  auth.py  task.py  workstation.py
src/backend/routers/: __init__.py  auth.py  tasks.py  workstation.py
src/backend/services/: __init__.py  db_service.py  influx_service.py  notifications_service.py
src/config/: index.ts
src/controllers/: auth.controller.ts  station.controller.ts
src/interfaces/: auth.interface.ts
src/middlewares/: auth.middleware.ts
src/routes/: auth.route.ts  workstation.route.ts
src/services/: auth.service.ts  db.service.ts  metrics.service.ts  station.service.ts
src/utils/debug/: .3ed2360c5c14b8aaaa859c835b365e83fe0cc895-audit.json  .4a9053db3c15c84daeab33b747883bbaa449191e-audit.json
src/utils/error/: .21f6c392c302ad2741afb350648941ebe9f6afe0-audit.json  (+1 more)
(+11 files in other folders)
