[options]
package_dir =
    = src
packages = find:
install_requires = 
    starlette_exporter
    fastapi
    pydantic
    uvicorn
    configargparse
    pyjwt
    psycopg2
    influxdb-client

[options.extras_require]
dev =
    nox
    black
    isort
    mypy
    flake8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    backend = backend.__main__:main

[bdist_wheel]
universal = 1
